--- a/App Store Export/manifest.json
+++ b/App Store Export/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "App Store Export",
+	"name": "Store-export",
 	"description" : "___DESCRIPTION___",
 	"author": "Robert Kortenoeven",
 	"authorEmail" : "___EMAIL___",
