Finally some result (albeit hacky), now calls cocoascript from Objective-c

--- a/AppStoreExport/manifest.json
+++ b/AppStoreExport/manifest.json
@@ -43,6 +43,14 @@
          "SelectionChanged.finish" : "onSelectionChanged"
        }
      }
-   }
+   },
+    {
+        "script" : "LocalizerScript.cocoascript",
+        "handlers" : {
+            "actions" : {
+                "localiseIOS.start" : "localiseIOS",
+            }
+        }
+    }
  ]
 }
